# basic_rpc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  greet_client.py  greet_server.py  pyproject.toml  pytest.ini
basic_rpc/: rpc_blocking_client.py  rpc_low_level.py  rpc_serialization_functions.py  rpc_spec.py  rpc_threaded_server.py
basic_socket_rpc/: rpc_blocking_client.py  rpc_low_level.py  rpc_serialization_functions.py  rpc_spec.py  rpc_threaded_server.py
examples/greet/: exclusive_greet_server.py  greet_client.py  greet_server.py
src/basic_socket_rpc/: rpc_low_level.py  rpc_spec.py
tests/: conftest.py  test_hello.py  test_serialization.py
