[project]
name = "basic-socket-rpc"
version = "0.6.0"
description = "Basic binary socket based rpc for Python"
readme = "README.md"
license = "MIT"
license-files = [
"LICENSE",
]
authors = [
    { name = "Gregory.Kuhn", email = "gregory.kuhn@analog.com" }
]
requires-python = ">=3.8"
dependencies = []


[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "pytest>=7.0.1",
]
